--- a/booth_25timetable.html
+++ b/booth_25timetable.html
@@ -16,8 +16,8 @@
             <button class="nav_button" onclick="location.href = './index.html'">
                 HOME
             </button>
-            <button class="nav_button" onclick="location.href = './booth_24timetable.html'" style="border-bottom: 2px solid #ffffff;">
-                축제안내
+            <button class="nav_button" onclick="location.href = './booth_25timetable.html'" style="border-bottom: 2px solid #ffffff;">
+                공연안내
             </button>
             <button class="nav_button" onclick="location.href = './booth.html'">
                 부스안내
@@ -28,13 +28,6 @@
         </div>
 
         <div class="date_div">
-            <button class="first_day" onclick="location.href = './booth_24timetable.html'">
-                <p class="first_dday">
-                    수
-                    <br>
-                    24
-                </p>
-            </button>
             <button class="second_day" onclick="location.href = './booth_25timetable.html'">
                 <p class="second_dday">
                     목
@@ -49,14 +42,21 @@
                     26
                 </p>
             </button>
+            <button class="day_guest" onclick="location.href = './booth_guest.html'">
+                <p class="day_guest_txt">
+                    스페셜
+                    <br>
+                    게스트
+                </p>
+            </button>
         </div>
         <div class="booth_box">
             <div class="booth_festival">
                 <section class="booth_table">
-                    <button class="booth_time_name">
+                    <button class="booth_time_name" onclick="location.href = './booth_25timetable.html'">
                         부스 위치
                     </button>
-                    <button class="booth_time_table">
+                    <button class="booth_time_table" onclick="location.href = './booth.html'">
                         공연 시간
                     </button>
                 </section>
@@ -73,10 +73,10 @@
                                     
                                     <div class="list_time_name">
                                         <div class="list_time">
-                                            13:00 ~ 13:30
+                                            15:00 ~ 16:00
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            개막식
                                         </div>
                                     </div>
                                 </div>
@@ -84,81 +84,6 @@
                             <div class="time_table_list">
                                 <div class="list_num">
                                     <img src = "./img/i_timetable_logo_day.png">
-                                </div>
-                                <div class="list_logo_name_box">
-                                    <div class="list_time_name">
-                                        <div class="list_time">
-                                            13:30 ~ 14:00
-                                        </div>
-                                        <div class="list_name">
-                                            멋쟁이 사자처럼
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="time_table_list">
-                                <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
-                                </div>
-                                <div class="list_logo_name_box">
-                                    <div class="list_time_name">
-                                        <div class="list_time">
-                                            14:00 ~ 14:30
-                                        </div>
-                                        <div class="list_name">
-                                            멋쟁이 사자처럼
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="time_table_list">
-                                <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
-                                </div>
-                                <div class="list_logo_name_box">
-                                    <div class="list_time_name">
-                                        <div class="list_time">
-                                            14:30 ~ 15:00
-                                        </div>
-                                        <div class="list_name">
-                                            멋쟁이 사자처럼
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="time_table_list">
-                                <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
-                                </div>
-                                <div class="list_logo_name_box">
-                                    <div class="list_time_name">
-                                        <div class="list_time">
-                                            15:00 ~ 15:30
-                                        </div>
-                                        <div class="list_name">
-                                            멋쟁이 사자처럼
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="time_table_list">
-                                <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
-                                </div>
-                                <div class="list_logo_name_box">
-                                    <div class="list_time_name">
-                                        <div class="list_time">
-                                            15:30 ~ 16:00
-                                        </div>
-                                        <div class="list_name">
-                                            멋쟁이 사자처럼
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="time_table_list">
-                                <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -166,44 +91,29 @@
                                             16:00 ~ 16:30
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            동아리 공연(그라미)
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src = "./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
                                         <div class="list_time">
-                                            16:30 ~ 17:00
+                                            16:30 ~ 17:30
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            동아리 공연(SDR)
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
-                                </div>
-                                <div class="list_logo_name_box">
-                                    <div class="list_time_name">
-                                        <div class="list_time">
-                                            17:00 ~ 17:30
-                                        </div>
-                                        <div class="list_name">
-                                            멋쟁이 사자처럼
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="time_table_list">
-                                <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src = "./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -211,14 +121,29 @@
                                             17:30 ~ 18:00
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            동아리 공연(애니문)
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src = "./img/i_timetable_logo_day.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            18:00 ~ 18:30
+                                        </div>
+                                        <div class="list_name">
+                                            동아리 공연 (UDream)
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -226,7 +151,7 @@
                                             18:30 ~ 19:00
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            동아리 공연 (WORKERS)
                                         </div>
                                     </div>
                                 </div>
@@ -241,7 +166,112 @@
                                             19:00 ~ 19:30
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            SPECIAL GUEST : CLASS:y
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_night.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            19:30 ~ 20:00
+                                        </div>
+                                        <div class="list_name">
+                                            SPECIAL GUEST : BAE173
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_night.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            20:00 ~ 20:30
+                                        </div>
+                                        <div class="list_name">
+                                            SPECIAL GUEST : 송가인
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_night.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            20:30 ~ 21:00
+                                        </div>
+                                        <div class="list_name">
+                                            SPECIAL GUEST : tripleS KRE
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_night.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            21:00 ~ 21:30
+                                        </div>
+                                        <div class="list_name">
+                                            SPECIAL GUEST : 폴킴
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_night.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            21:30 ~ 22:00
+                                        </div>
+                                        <div class="list_name">
+                                            SPECIAL GUEST : 이채연
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_night.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            22:00 ~ 22:30
+                                        </div>
+                                        <div class="list_name">
+                                            SPECIAL GUEST : YENA(최예나)
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_night.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            22:30 ~ 23:00
+                                        </div>
+                                        <div class="list_name">
+                                            영화영상학과 영화상영
                                         </div>
                                     </div>
                                 </div>
