--- a/booth_26timetable.html
+++ b/booth_26timetable.html
@@ -17,7 +17,7 @@
                 HOME
             </button>
             <button class="nav_button" onclick="location.href = './booth_24timetable.html'" style="border-bottom: 2px solid #ffffff;">
-                축제안내
+                공연안내
             </button>
             <button class="nav_button" onclick="location.href = './booth.html'">
                 부스안내
@@ -28,35 +28,35 @@
         </div>
 
         <div class="date_div">
-            <section class="first_day" onclick="location.href = './booth_24timetable.html'">
-                <p class="first_dday">
-                    수
-                    <br>
-                    24
-                </p>
-            </section>
-            <section class="second_day" onclick="location.href = './booth_25timetable.html'">
+            <button class="second_day" onclick="location.href = './booth_25timetable.html'">
                 <p class="second_dday">
                     목
                     <br>
                     25
                 </p>
-            </section>
-            <section class="third_day" onclick="location.href = './booth_26timetable.html'">
+            </button>
+            <button class="third_day" onclick="location.href = './booth_26timetable.html'">
                 <p class="third_dday">
                     금
                     <br>
                     26
                 </p>
-            </section>
+            </button>
+            <button class="day_guest" onclick="location.href = './booth_guest.html'">
+                <p class="day_guest_txt">
+                    스페셜
+                    <br>
+                    게스트
+                </p>
+            </button>
         </div>
         <div class="booth_box">
             <div class="booth_festival">
                 <section class="booth_table">
-                    <button class="booth_time_name">
+                    <button class="booth_time_name" onclick="location.href = './booth_26timetable.html'">
                         부스 위치
                     </button>
-                    <button class="booth_time_table">
+                    <button class="booth_time_table" onclick="location.href = './booth.html'">
                         공연 시간
                     </button>
                 </section>
@@ -73,92 +73,17 @@
                                     
                                     <div class="list_time_name">
                                         <div class="list_time">
-                                            13:00 ~ 13:30
-                                        </div>
-                                        <div class="list_name">
-                                            멋쟁이 사자처럼
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="time_table_list">
-                                <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
-                                </div>
-                                <div class="list_logo_name_box">
-                                    <div class="list_time_name">
-                                        <div class="list_time">
-                                            13:30 ~ 14:00
-                                        </div>
-                                        <div class="list_name">
-                                            멋쟁이 사자처럼
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="time_table_list">
-                                <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
-                                </div>
-                                <div class="list_logo_name_box">
-                                    <div class="list_time_name">
-                                        <div class="list_time">
-                                            14:00 ~ 14:30
-                                        </div>
-                                        <div class="list_name">
-                                            멋쟁이 사자처럼
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="time_table_list">
-                                <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
-                                </div>
-                                <div class="list_logo_name_box">
-                                    <div class="list_time_name">
-                                        <div class="list_time">
-                                            14:30 ~ 15:00
-                                        </div>
-                                        <div class="list_name">
-                                            멋쟁이 사자처럼
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="time_table_list">
-                                <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
-                                </div>
-                                <div class="list_logo_name_box">
-                                    <div class="list_time_name">
-                                        <div class="list_time">
-                                            15:00 ~ 15:30
-                                        </div>
-                                        <div class="list_name">
-                                            멋쟁이 사자처럼
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="time_table_list">
-                                <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
-                                </div>
-                                <div class="list_logo_name_box">
-                                    <div class="list_time_name">
-                                        <div class="list_time">
                                             15:30 ~ 16:00
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            소모임 공연(락온)
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src = "./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -166,14 +91,14 @@
                                             16:00 ~ 16:30
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            소모임 공연(철인 28호)
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src = "./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -181,14 +106,14 @@
                                             16:30 ~ 17:00
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            소모임 공연(꽃과 어린왕자)
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src = "./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -196,14 +121,14 @@
                                             17:00 ~ 17:30
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            소모임 공연(불협화음)
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src = "./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -211,7 +136,22 @@
                                             17:30 ~ 18:00
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            무용예술학부 공연
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_day.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            18:00 ~ 19:00
+                                        </div>
+                                        <div class="list_name">
+                                            실용음악학부 공연
                                         </div>
                                     </div>
                                 </div>
@@ -223,10 +163,10 @@
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
                                         <div class="list_time">
-                                            18:30 ~ 19:00
+                                            19:00 ~ 20:30
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            UP TO YOU: 네 맘대로 도전 100곡
                                         </div>
                                     </div>
                                 </div>
@@ -238,10 +178,57 @@
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
                                         <div class="list_time">
-                                            19:00 ~ 19:30
+                                            20:30 ~ 21:00
                                         </div>
                                         <div class="list_name">
-                                            멋쟁이 사자처럼
+                                            SPECIAL GUEST : 한요한
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_night.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            21:00 ~ 21:30
+                                        </div>
+                                        <div class="list_name">
+                                            SPECIAL GUEST : H1-KEY
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_night.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            21:30 ~ 22:00
+                                        </div>
+                                        <div class="list_name">
+                                            SPECIAL GUEST : BE'O
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <div class="time_table_list">
+                                <div class="list_num">
+                                    <img src = "./img/i_timetable_logo_night.png">
+                                </div>
+                                <div class="list_logo_name_box">
+                                    <div class="list_time_name">
+                                        <div class="list_time">
+                                            22:00 ~ 23:00
+                                        </div>
+                                        <div class="list_name">
+                                            DJ 페스티벌 : DJ YOUKEEP
                                         </div>
                                     </div>
                                 </div>
