--- a/about.html
+++ b/about.html
@@ -22,36 +22,40 @@
             <button class="nav_button" onclick="location.href = './booth.html'">
                 부스안내
             </button>
-            <button class="nav_button" onclick="location.href = './about.html'" style="border-bottom: 2px solid #ffffff;">
+            <button class="nav_button" onclick="location.href = './about.html'"
+                style="border-bottom: 2px solid #ffffff;">
                 ABOUT
             </button>
         </div>
         <div class="aboutus">
-            <div class=" about_intro_box">
                 <div class="about">
                     <p class="about_intro">
                         <img src="./img/i_about_logo2.png">
                     <div class="p1">
-                        안녕하세요. <span style="color:rgb(255, 255, 190)">서경대학교 멋쟁이사자처럼</span> 입니다.
+                        안녕하세요. 서경대학교 학우 여러분,
+                        <br>
+                        <span style="color:rgb(255, 255, 190)">서경대학교 멋쟁이사자처럼🦁</span> 입니다.
                     </div>
                     <div class="p1">
-                        2023년 1학기 서경대학교 대동제를 맞아
+                        2023년 서경대학교 대동제를 맞아
+                        <br>
+                        학우분들의 편의를 위해
                         <br>
                         동아리 "멋쟁이사자처럼" 아이오갤 팀에서
                         <br>
-                        학우분들께 보다 즐겁고 편한 축제가
-                        <br>
-                        되었으면 하는 마음에 제작을 하였습니다.
-                        <br>
-
+                        축제 사이트를 개발하였습니다.
                     </div>
                     <div class="p1">
-                        여느때보다 즐겁고 행복한 축제가 되시기를 진심으로 소망합니다.
+                        이번 대동제가 어느때보다 즐겁고
                         <br>
-                        학우 여러분들의 예쁘고 찬란한 청춘을 응원합니다.
+                        편한 축제가 되기를 응원합니다.
+                        <br>
+                        축제에서 행복한 추억만 남겨가기를 소망합니다!
                     </div>
                     <div class="p1">
                         -TEAM 아이오갤-
+                        <br>
+                        <br>
                     </div>
                     </p>
                 </div>
@@ -59,7 +63,6 @@
                     <p class="intro_us">
                         <b class="intro_head">DEVELOPERS</b>
                     </p>
-
                     <div class="member_list">
                         <div class="card_info_left">
                             <img class="card_img" src="./img/i_bondi_hj.png" style="width: 100px; height: 100px;">
@@ -101,12 +104,10 @@
                     </div>
                     <br>
                     <br>
-                    <br>
                 </div>
+            <div class="skon_festival_color">
+                <img src="./img/i_booth_bg_scon.png" width="185px" height="53">
             </div>
-        </div>
-        <div class="skon_festival_color">
-            <img src="./img/i_booth_bg_scon.png">
         </div>
     </div>
 </body>
